added main font, removed about route

--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
-    <link rel="mask-icon" href="/logo.png" color="#16a34a" />
+    <link rel="mask-icon" href="/logo.png" color="#469269" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,400;1,500&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guess Where</title>
   </head>
-  <body class="overflow-hidden">
+  <body
+    class="min-h-screen overflow-x-hidden bg-neutral-50 text-neutral-900 dark:bg-neutral-800 dark:text-neutral-100"
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
