--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     class="min-h-screen overflow-x-hidden bg-neutral-50 text-neutral-900 dark:bg-neutral-800 dark:text-neutral-100"
   >
     <div id="root"></div>
+    <div id="modal"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
